--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "dev": "nodemon --exec  babel-node src/app.js",
+    "build": "babel src --out-dir dist",
+    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "lint": "eslint . --ext .js",
