--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.40.0",
     "express": "^4.18.2",
     "mongoose": "^7.1.0",
+    "mongoose-paginate-v2": "^1.7.1",
     "prettier": "^2.8.8"
   },
   "devDependencies": {
